# GAIL-UAV-Path-planning

./: README.md  environment.yml  pyproject.toml  requirements.txt
configs/: ablation.yaml  baselines.yaml  breakthrough.yaml  full.yaml  gail_ppo.yaml  inpainting.yaml  interception.yaml  quick.yaml
data/: README.md
data/expert/: trajectory_00.npz  trajectory_01.npz  trajectory_02.npz  trajectory_03.npz  trajectory_04.npz  trajectory_05.npz  trajectory_06.npz  trajectory_07.npz  trajectory_08.npz  trajectory_09.npz
data/processed/: expert_state_actions.npz  inpainting_scaler.npz
scripts/: 00_check_env.py  01_generate_expert_data.py  02_train_inpainting.py  03_eval_inpainting.py  04_train_gail.py  05_train_baselines.py  06_eval_breakthrough.py  07_eval_interception.py  08_run_ablation.py  09_make_all_figures.py  10_reproduce_all.ps1  10_reproduce_all.sh  _common.py
src/: __init__.py
src/algorithms/: __init__.py  aco.py  apf.py  ddpg.py  gail.py  ppo.py  replay_buffer.py  rollout_buffer.py  train_gail_ppo.py  train_inpainting.py
src/data/: __init__.py  expert_dataset.py  missing_mask.py  preprocessing.py  synthetic_expert_generator.py
src/envs/: __init__.py  breakthrough_env.py  entities.py  interception_env.py  reward.py  uav_dynamics.py  wrappers.py
src/metrics/: __init__.py  inpainting_metrics.py  planning_metrics.py
src/models/: __init__.py  attention.py  gail_discriminator.py  gan_lstm.py  policy.py  value.py  (+1 more)
tests/: test_env_step.py  test_gan_shapes.py  test_metrics.py  test_policy_shapes.py  test_reproducibility.py  test_rollout_logging.py
(+19 files in other folders)
