[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gail-uav-reproduction"
version = "0.1.0"
description = "Reproduction code for GAN-LSTM trajectory inpainting and GAIL-PPO UAV navigation."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "torch>=2.0",
  "scipy>=1.10",
  "tabulate>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

